fix webgl jump on scroll android

--- a/website/pages/home/home.module.scss
+++ b/website/pages/home/home.module.scss
@@ -11,7 +11,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  bottom: 0;
+  height: 100vh;
   right: 0;
 
   &::after {
